--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,6 @@
 	<title>Hello World</title>
 </head>
 <body>
-<h1>Hello Hess</h1>
+<h1>Hello Hess! Der Sonnenuntergang ist super!</h1>
 </body>
 </html>
